This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

24-Jul-2004 (Lars Duening)  (3.3.578)
  - (xerq/defs.h) ERQ_DEBUG level wasn't properly translated into
       debug output.
  - (xerq/socket.c) Added a few level 2 diagnostics.
  - (interpret.c) Removed two left-over DEBUG diagnostics (reported
       by Bardioc).
  - (comm.c) input_to() didn't properly check its arguments (Bug #0000098).
  - (call_out.c) If a call-out causes an error, all further call-outs for
       the same user are re-scheduled to the next cycle. This is mainly
       meant to stop run-away call-outs causing too-long-evaluations while
       re-scheduling calls to themselves (Bug #0000095).

21-Jul-2004 (Lars Duening)  (3.3.577)
  - (array.c, interpret.c) Removed a number of memory leaks caused by
       runtime errors during array operations which exceeded the max
       array size (Bug #0000096).
  - (comm.c) If input_to() wasn't given a valid prompt, it leaked
       the memory for the internal input-to structure (Bug #0000096).
  - (comm.c) If binary_message() was given an array of non-ints, it leaked
       the memory for the internal message string (Bug #0000096).
  - (bitstrings.c) The bitstring operators would leak the memory for
       the result if encountering an invalid bitpattern (Bug #0000096).
  - (files.c) If tail() couldnt' find the file, it didn't free the
       string with the pathname (Bug #0000096).

16-Jul-2004 (Lars Duening)  (3.3.576)
  - (interpret.c) When printing a warning during the creation of in inline
       closure, the global stack pointer was one too low (thanks, Gnomi)
       (part of Bug #0000091)

14-Jul-2004 (Lars Duening)  (3.3.575)
  - (prolang.y) The 'missing return' warning is no longer triggered if
       a function ends with raise_error() or throw().
  - (comm.c) Efun input_to(): the check for a change in the CHARMODE mode