@@ -60,24 +60,20 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 578)
-(Parent-Version lpmud 3-3 577)
+(Project-Version lpmud 3-3 579)
+(Parent-Version lpmud 3-3 578)
 (Version-Log "
-  - (xerq/defs.h) ERQ_DEBUG level wasn't properly translated into
-       debug output.
-  - (xerq/socket.c) Added a few level 2 diagnostics.
-  - (interpret.c) Removed two left-over DEBUG diagnostics (reported
-       by Bardioc).
-  - (comm.c) input_to() didn't properly check its arguments (Bug #0000098).
-  - (call_out.c) If a call-out causes an error, all further call-outs for
-       the same user are re-scheduled to the next cycle. This is mainly
-       meant to stop run-away call-outs causing too-long-evaluations while
-       re-scheduling calls to themselves (Bug #0000095).
+  - (xerq/erq.c) If select() in the main loop was interrupted by a signal,
+       the ERQ still proceeded to evaluate the fd-sets.
+  - (xerq/execute.c) The debug logging of the execute parameters didn't
+       work.
+  - (comm.c) If an ERQ callback function accepts an array, the numbers
+       are now all passed on positive (range 0..255).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Sun, 25 Jul 2004 00:28:23 -0600")
+(Checkin-Time "Sun, 25 Jul 2004 21:12:52 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -115,7 +111,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.77 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.641 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.642 644))
   (HISTORY (lpmud/f/49_HISTORY 1.368 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -181,10 +177,10 @@
   (src/bitstrings.c (lpmud/i/48_bitstrings 1.16 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.3 644))
   (src/call_out.h (lpmud/f/45_call_out.h 1.7.1.6 644))
-  (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.27 644))
+  (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.28 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.18 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.20 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.90 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.91 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.40 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -471,9 +467,9 @@
   (src/util/xerq/lpc/TODO (lpmud/k/31_TODO 1.1 644))
   (src/util/xerq/lpc/README (lpmud/k/32_README 1.2 644))
   (src/util/xerq/lookup.c (lpmud/k/33_lookup.c 1.4.1.1.1.4 644))
-  (src/util/xerq/execute.c (lpmud/k/34_execute.c 1.5.1.1.1.6 644))
+  (src/util/xerq/execute.c (lpmud/k/34_execute.c 1.5.1.1.1.7 644))
   (src/util/xerq/erq.h (lpmud/k/35_erq.h 1.3.1.2 644))
-  (src/util/xerq/erq.c (lpmud/k/36_erq.c 1.8.1.12.1.5 644))
+  (src/util/xerq/erq.c (lpmud/k/36_erq.c 1.8.1.12.1.6 644))
   (src/util/xerq/docs/socketd/socket_write (lpmud/k/38_socket_wri 1.1 644))
   (src/util/xerq/docs/socketd/socket_udp (lpmud/k/39_socket_udp 1.1 644))
   (src/util/xerq/docs/socketd/socket_transfer (lpmud/k/40_socket_tra 1.1 644))
@@ -1013,7 +1009,7 @@
   (doc/applied/reset (lpmud/n/30_reset 1.5 644))
 
   (doc/concepts/concepts (lpmud/n/31_concepts 1.2 644))
-  (doc/concepts/erq (lpmud/n/32_erq 1.10 644))
+  (doc/concepts/erq (lpmud/n/32_erq 1.11 644))
   (doc/concepts/files (lpmud/n/33_files 1.2 644))
   (doc/concepts/hooks (lpmud/h/9_hooks 1.10.1.17 644))
   (doc/concepts/imp (lpmud/n/34_imp 1.4 644))
