@@ -345,6 +345,9 @@ call_out (void)
             debug_message("%s call_out: user '%s' had an error: "
                           "rescheduling call_out.\n"
                          , time_stamp(), get_txt(user->name));
+            fprintf(stderr, "%s call_out: user '%s' had an error: "
+                          "rescheduling call_out.\n"
+                         , time_stamp(), get_txt(user->name));
             insert_call(cop, 1);
             continue;
         }
